* 2005-10-20 Jeremy Sanders <jeremy@jeremysanders.net>
	- Release 0.8
	
* 2005-10-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added SVG export support

* 2005-10-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added stock icons for copy, cut, paste
	
* 2005-10-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- A long wait!
	- Added patch by James Graham to support copy/cut/paste support
	of widgets. Cleaned up to make the logic more simple.
	- A widget should get the selection after another is deleted
	- CreateWindow becomes a MainWindow classmethod
	
* 2005-09-23 Jeremy Sanders <jeremy@jeremysanders.net>
	- Finally get dataset linking working with cross dependencies
	
* 2005-09-13 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add linecross and lineplus markers
	- Fix a couple of dataset link bugs
	
* 2005-09-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Increase size of star, cross and triangle markers by 20%
	to match other markers better
	- Increase pentagon too
	- Start work to tie settings together
	
* 2005-08-30 Jeremy Sanders <jeremy@jeremysanders.net>
	- Time out splash logo
	- Use left click for panning instead of middle click. Left click
	after timeout changes cursor to panning cursor
	
* 2005-08-29 Jeremy Sanders <jeremy@jeremysanders.net>
	- Allow datasets to be linked to other datasets using expressions
	- Add SetDataExpression command
	- Modify create dataset and edit dataset dialogs to allow linked
	datasets
	- Add some other zoom icons
	
* 2005-08-20 Jeremy Sanders <jeremy@jeremysanders.net>
	- Change drop down lists to use grey rather than red
	- Allow user to click on widgets, and they are selected
	in the widget tree
	- Middle mouse button can scroll the plot window around
	
* 2005-08-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add "scale" setting for TickLabels
	
* 2005-08-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Settings controls cleanups
	- Implement Axis setting (for choosing axes)
	- Show Marker pixmaps on drop down list
	