@@ -1,2 +1,2 @@
-0.9-cvs
+0.9.cvs
 
