@@ -1,3 +1,6 @@
+* 2005-10-23 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Some work towards contour plotting
+	
 * 2005-10-20 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Release 0.8
 	
